--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^10.0.1",
+    "download-git-repo": "^3.0.2",
     "inquirer": "^8.0.0"
   }
 }
