--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "commander": "^10.0.1",
     "download-git-repo": "^3.0.2",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "ora": "^5.4.1"
   }
 }
