--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^10.0.1",
     "download-git-repo": "^3.0.2",
     "inquirer": "^8.0.0",
